Fix byline author image bleeding outside circle on Android <4.3

--- a/ArticleTemplates/css/scss/partials/_article__header.scss
+++ b/ArticleTemplates/css/scss/partials/_article__header.scss
@@ -111,11 +111,9 @@
 		float: left;
 		margin-right: 0.5em;
 		margin-bottom: -1em;
-		position: relative;
 		img {
 			height: 100%;
-			position: absolute;
-			left: -10%;
+			margin-left: -10%;
 		}
 	}
 
