--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -2757,12 +2757,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     vertical-align: middle;
     float: left;
     margin-right: 0.5em;
-    margin-bottom: -1em;
-    position: relative; }
+    margin-bottom: -1em; }
     .article__header .article__author__image img {
       height: 100%;
-      position: absolute;
-      left: -10%; }
+      margin-left: -10%; }
   .article__header .article__image-caption__icon {
     display: none; }
   @media all and (max-width: 28.115em) {
